--- a/Audio/Base.lproj/Main.storyboard
+++ b/Audio/Base.lproj/Main.storyboard
@@ -17,22 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="dw5-Vx-UUM">
-                                <rect key="frame" x="32" y="84" width="326" height="229"/>
+                                <rect key="frame" x="8.6666666666666572" y="84" width="373" height="229"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGb-7t-Dr7">
-                                        <rect key="frame" x="98.666666666666657" y="0.0" width="129" height="28.666666666666668"/>
+                                        <rect key="frame" x="122" y="0.0" width="129" height="28.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="lr9-7F-cob">
-                                        <rect key="frame" x="23" y="57.666666666666657" width="280" height="4"/>
+                                        <rect key="frame" x="46.333333333333343" y="57.666666666666657" width="280" height="4"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="280" id="BZ9-Ig-Sw0"/>
                                         </constraints>
                                     </progressView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="126" translatesAutoresizingMaskIntoConstraints="NO" id="P36-H6-h0k">
-                                        <rect key="frame" x="0.0" y="90.666666666666657" width="326" height="20.333333333333329"/>
+                                        <rect key="frame" x="23.333333333333343" y="90.666666666666657" width="326" height="20.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentTime" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQT-9J-3yn">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="20.333333333333332"/>
@@ -55,7 +55,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="83" translatesAutoresizingMaskIntoConstraints="NO" id="gaW-K5-I9P">
-                                        <rect key="frame" x="28" y="140" width="270" height="30"/>
+                                        <rect key="frame" x="51.333333333333343" y="140" width="270" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJz-tn-iVL">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
@@ -81,7 +81,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2Uw-R4-adE">
-                                        <rect key="frame" x="12.666666666666657" y="199" width="301" height="30"/>
+                                        <rect key="frame" x="0.0" y="199" width="373" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7RM-1u-TAH">
                                                 <rect key="frame" x="0.0" y="0.0" width="57" height="30"/>
@@ -90,7 +90,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="cKE-dC-FrP">
-                                                <rect key="frame" x="65" y="0.0" width="238" height="31"/>
+                                                <rect key="frame" x="65" y="0.0" width="310" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="KIJ-Ou-gqS"/>
                                                 </constraints>
@@ -102,20 +102,64 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Lj3-Gq-5Vu">
+                                <rect key="frame" x="139.33333333333334" y="359" width="111.33333333333334" height="65"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gfL-hg-G0j">
+                                        <rect key="frame" x="0.0" y="0.0" width="111.33333333333333" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FjX-RF-7zT">
+                                                <rect key="frame" x="0.0" y="0.0" width="54.333333333333336" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="dC3-kE-bbm">
+                                                <rect key="frame" x="62.333333333333314" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="swRecordMode:" destination="BYZ-38-t0r" eventType="valueChanged" id="WT9-9r-Njv"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Lsr-Tb-jXg">
+                                        <rect key="frame" x="0.0" y="35" width="111.33333333333333" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kmW-wA-Bq3">
+                                                <rect key="frame" x="0.0" y="0.0" width="51.333333333333336" height="30"/>
+                                                <state key="normal" title="Record"/>
+                                                <connections>
+                                                    <action selector="btnRecord:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eC4-n7-8j0"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9V-5R-oc2">
+                                                <rect key="frame" x="65.333333333333314" y="0.0" width="46" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="dw5-Vx-UUM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1oq-nj-bKd"/>
                             <constraint firstItem="dw5-Vx-UUM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="RDN-wI-e0k"/>
+                            <constraint firstItem="Lj3-Gq-5Vu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mkN-qe-t0X"/>
+                            <constraint firstItem="Lj3-Gq-5Vu" firstAttribute="top" secondItem="dw5-Vx-UUM" secondAttribute="bottom" constant="46" id="v4C-cn-gCB"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="btnPause" destination="ce2-ek-0AB" id="ITe-ME-R2O"/>
                         <outlet property="btnPlay" destination="UJz-tn-iVL" id="c52-qF-gQO"/>
+                        <outlet property="btnRecord" destination="kmW-wA-Bq3" id="mIN-xE-2wP"/>
                         <outlet property="btnStop" destination="w2z-9e-4iN" id="oQq-Pb-qL7"/>
                         <outlet property="lblCurrentTime" destination="UQT-9J-3yn" id="RQa-nl-xb1"/>
                         <outlet property="lblEndTime" destination="p81-Jf-kg1" id="V6y-c0-UCV"/>
+                        <outlet property="lblRecordTime" destination="u9V-5R-oc2" id="bxx-Sc-wPX"/>
                         <outlet property="pvProgressPlay" destination="lr9-7F-cob" id="8gj-Tc-TSb"/>
                         <outlet property="slVolume" destination="cKE-dC-FrP" id="XtJ-GB-ddb"/>
                     </connections>
